snibox/openshift/deploy-app.yaml
apiVersion: v1
items:

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the application server
      template.alpha.openshift.io/wait-for-ready: 'true'
    name: snibox
    labels:
      app: snibox
  spec:
    replicas: 1
    selector:
      name: snibox
    strategy:
      type: Recreate
      recreateParams:
        pre:
          execNewPod:
            command:
              - migrate-database
            containerName: snibox
          failurePolicy: Ignore
      
    template:
      metadata:
        name: snibox
        labels:
          name: snibox
          app: snibox
      spec:
        containers:
          - env:
              # app
              - name: APPLICATION_HOSTNAME
                value: 'www.example.com'
              - name: DOMAIN_NAME
                value: 'example.com'
              # database, user etc
              - name: DATABASE_SERVICE_NAME
                value: 'postgresql'
              - name: DATABASE_NAME
                valueFrom:
                  secretKeyRef:
                    key: database-name
                    name: snibox-secrets
              - name: DATABASE_USER
                valueFrom:
                  secretKeyRef:
                    key: database-user
                    name: snibox-secrets
              - name: DATABASE_PASSWORD
                valueFrom:
                  secretKeyRef:
                    key: database-password
                    name: snibox-secrets
              # db connection parameters
              - name: MAX_CONNECTIONS
                value: '50'
              - name: POSTGRESQL_SHARED_BUFFERS
                value: '12MB'
              # smtp
              - name: SMTP_PROVIDER_HOST
                valueFrom:
                  secretKeyRef:
                    key: smtp-provider-host
                    name: snibox-secrets
              - name: SMTP_PROVIDER_DOMAIN
                valueFrom:
                  secretKeyRef:
                    key: smtp-provider-domain
                    name: snibox-secrets
              - name: SMTP_PROVIDER_USERNAME
                valueFrom:
                  secretKeyRef:
                    key: smtp-provider-username
                    name: snibox-secrets
              - name: SMTP_PROVIDER_PASSWORD
                valueFrom:
                  secretKeyRef:
                    key: smtp-provider-password
                    name: snibox-secrets
              # rails
              - name: RAILS_ENV
                value: 'production'
              - name: RAILS_LOG_LEVEL
                value: 'warn'
              - name: SECRET_KEY_BASE
                valueFrom:
                  secretKeyRef:
                    key: keybase
                    name: snibox-secrets
              - name: REQUIRE_RAILS_MASTER_KEY
                value: 'false'
              - name: RAILS_MASTER_KEY
                valueFrom:
                  secretKeyRef:
                    key: rails-master-key
                    name: snibox-secrets
              - name: RAILS_SERVE_STATIC_FILES
                value: 'true'
              - name: RAILS_ENFORCE_SSL
                value: 'false'
            
            image: ''
            name: snibox
            ports:
              - containerPort: 8080

            #livenessProbe:
            #  httpGet:
            #    path: /status/alive
            #    port: 8080
            #  initialDelaySeconds: 60
            #  timeoutSeconds: 3
            
            #readinessProbe:
            #  httpGet:
            #    path: /status/ready
            #    port: 8080
            #  initialDelaySeconds: 30
            #  timeoutSeconds: 5
            
            resources:
              limits:
                memory: '512Mi'

    triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: true
          containerNames:
            - snibox
          from:
            kind: ImageStreamTag
            name: 'snibox:latest'
        type: ImageChange

- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
      service.alpha.openshift.io/dependencies: '[{"name": "${DATABASE_SERVICE_NAME}", "kind": "Service"}]'
    name: snibox
    labels:
      app: snibox
  spec:
    ports:
      - name: web
        port: 8080
        targetPort: 8080
    selector:
      name: snibox

- apiVersion: v1
  kind: Route
  metadata:
    name: www
    labels:
      app: snibox
  spec:
    #host: 'www.example.com'
    to:
      kind: Service
      name: snibox
      
kind: List
metadata: []
